@@ -3354,6 +3354,63 @@ name|DoNotRetryIOException
 name|e
 parameter_list|)
 block|{
+name|long
+name|timeout
+init|=
+name|lastNext
+operator|+
+name|scannerTimeout
+decl_stmt|;
+if|if
+condition|(
+name|e
+operator|instanceof
+name|UnknownScannerException
+operator|&&
+name|timeout
+operator|<
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+condition|)
+block|{
+name|long
+name|elapsed
+init|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|-
+name|lastNext
+decl_stmt|;
+name|ScannerTimeoutException
+name|ex
+init|=
+operator|new
+name|ScannerTimeoutException
+argument_list|(
+name|elapsed
+operator|+
+literal|"ms passed since the last invocation, "
+operator|+
+literal|"timeout is currently set to "
+operator|+
+name|scannerTimeout
+argument_list|)
+decl_stmt|;
+name|ex
+operator|.
+name|initCause
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+name|ex
+throw|;
+block|}
 name|Throwable
 name|cause
 init|=
@@ -3420,50 +3477,6 @@ operator|=
 literal|null
 expr_stmt|;
 continue|continue;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-if|if
-condition|(
-name|e
-operator|instanceof
-name|UnknownScannerException
-operator|&&
-name|lastNext
-operator|+
-name|scannerTimeout
-operator|<
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-condition|)
-block|{
-name|ScannerTimeoutException
-name|ex
-init|=
-operator|new
-name|ScannerTimeoutException
-argument_list|()
-decl_stmt|;
-name|ex
-operator|.
-name|initCause
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-throw|throw
-name|ex
-throw|;
-block|}
-throw|throw
-name|e
-throw|;
 block|}
 name|lastNext
 operator|=
