@@ -322,7 +322,10 @@ condition|(
 name|ioe
 operator|!=
 literal|null
-operator|&&
+condition|)
+block|{
+if|if
+condition|(
 name|ioe
 operator|instanceof
 name|NotServingRegionException
@@ -340,6 +343,19 @@ argument_list|,
 name|ioe
 argument_list|)
 throw|;
+block|}
+elseif|else
+if|if
+condition|(
+name|ioe
+operator|instanceof
+name|DoNotRetryIOException
+condition|)
+block|{
+throw|throw
+name|ioe
+throw|;
+block|}
 block|}
 block|}
 return|return
