@@ -1,0 +1,457 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HBaseConfiguration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HBaseTestingUtility
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|util
+operator|.
+name|Bytes
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|After
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|AfterClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|fail
+import|;
+end_import
+
+begin_comment
+comment|/**  * Test various scanner timeout issues.  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|TestScannerTimeout
+block|{
+specifier|private
+specifier|final
+specifier|static
+name|HBaseTestingUtility
+name|TEST_UTIL
+init|=
+operator|new
+name|HBaseTestingUtility
+argument_list|()
+decl_stmt|;
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|getClass
+argument_list|()
+argument_list|)
+decl_stmt|;
+specifier|private
+specifier|final
+name|byte
+index|[]
+name|someBytes
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"f"
+argument_list|)
+decl_stmt|;
+comment|/**    * @throws java.lang.Exception    */
+annotation|@
+name|BeforeClass
+specifier|public
+specifier|static
+name|void
+name|setUpBeforeClass
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|HBaseConfiguration
+name|c
+init|=
+name|TEST_UTIL
+operator|.
+name|getConfiguration
+argument_list|()
+decl_stmt|;
+name|c
+operator|.
+name|setInt
+argument_list|(
+literal|"hbase.regionserver.lease.period"
+argument_list|,
+literal|1000
+argument_list|)
+expr_stmt|;
+name|TEST_UTIL
+operator|.
+name|startMiniCluster
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * @throws java.lang.Exception    */
+annotation|@
+name|AfterClass
+specifier|public
+specifier|static
+name|void
+name|tearDownAfterClass
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|TEST_UTIL
+operator|.
+name|shutdownMiniCluster
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**    * @throws java.lang.Exception    */
+annotation|@
+name|Before
+specifier|public
+name|void
+name|setUp
+parameter_list|()
+throws|throws
+name|Exception
+block|{   }
+comment|/**    * @throws java.lang.Exception    */
+annotation|@
+name|After
+specifier|public
+name|void
+name|tearDown
+parameter_list|()
+throws|throws
+name|Exception
+block|{   }
+comment|/**    * Test that we do get a ScannerTimeoutException    * @throws Exception    */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test2481
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|int
+name|initialCount
+init|=
+literal|10
+decl_stmt|;
+name|HTable
+name|t
+init|=
+name|TEST_UTIL
+operator|.
+name|createTable
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"t"
+argument_list|)
+argument_list|,
+name|someBytes
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|initialCount
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Put
+name|put
+init|=
+operator|new
+name|Put
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|put
+operator|.
+name|add
+argument_list|(
+name|someBytes
+argument_list|,
+name|someBytes
+argument_list|,
+name|someBytes
+argument_list|)
+expr_stmt|;
+name|t
+operator|.
+name|put
+argument_list|(
+name|put
+argument_list|)
+expr_stmt|;
+block|}
+name|Scan
+name|scan
+init|=
+operator|new
+name|Scan
+argument_list|()
+decl_stmt|;
+name|ResultScanner
+name|r
+init|=
+name|t
+operator|.
+name|getScanner
+argument_list|(
+name|scan
+argument_list|)
+decl_stmt|;
+name|int
+name|count
+init|=
+literal|0
+decl_stmt|;
+try|try
+block|{
+name|Result
+name|res
+init|=
+name|r
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|res
+operator|!=
+literal|null
+condition|)
+block|{
+name|count
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|count
+operator|==
+literal|5
+condition|)
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1500
+argument_list|)
+expr_stmt|;
+block|}
+name|res
+operator|=
+name|r
+operator|.
+name|next
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|ScannerTimeoutException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Got the timeout "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+name|fail
+argument_list|(
+literal|"We should be timing out"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
