@@ -285,6 +285,8 @@ Release 0.21.0 - Unreleased
                (Todd Lipcon via Stack)
    HBASE-2447  LogSyncer.addToSyncQueue doesn't check if syncer is still
                running before waiting (Todd Lipcon via Stack)
+   HBASE-2481  Client is not getting UnknownScannerExceptions; they are
+               being eaten (Jean-Daniel Cryans via Stack)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
